Add initial site structure

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,39 @@
     <script src="bundle.min.js" defer></script>
 </head>
 <body>
+    <section class="top-bar">
+        <div class="language-button">
+            <p>Português</p>
+        </div>
+        <div class="slogan">
+            <p></p>
+        </div>
+        <div class="social">
+            
+        </div> 
+    </section>
 
+    <header>
+        <div>
+            <div class="menu-icon">
+                <span class="dash"></span>
+                <span class="dash"></span>
+                <span class="dash"></span>
+            </div>
+            <p>Menu</p>
+        </div>
+        <div> 
+            <div></div>
+            <div>
+
+            </div>
+            <div>
+                <p>Registrar/Entrar</p>
+            </div>
+        </div>
+        <div class="join-us">
+            <p></p>
+        </div>
+    </header>
 </body>
 </html>
