Add sass-loader and proper configs

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Introdução a SASS</title>
+    <title>Introdução a SCSS</title>
+    <link rel="stylesheet" href="bundle.min.css">
     <script src="bundle.min.js" defer></script>
 </head>
 <body>
