Add examples for variables, functions, import and mixin

--- a/src/index.html
+++ b/src/index.html
@@ -43,5 +43,22 @@
             <p></p>
         </div>
     </header>
+
+    <div class="teste">
+        <p>Esse é meu primeiro texto em SCSS!</p>
+        <p>Esse é meu primeiro texto em SCSS!</p>
+        <p>Esse é meu primeiro texto em SCSS!</p>
+        <p>Esse é meu primeiro texto em SCSS!</p>
+
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ul>
+
+        <div>
+            <p>Esse é outro P.</p>
+        </div>
+    </div>
 </body>
 </html>
