--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Introdução a SCSS</title>
     <link rel="stylesheet" href="bundle.min.css">
-    <script src="bundle.min.js" defer></script>
+    <script src="bundle.min.js"></script>
 </head>
 <body>
     <section class="top-bar">
@@ -28,37 +28,24 @@
                 <span class="dash"></span>
                 <span class="dash"></span>
             </div>
-            <p>Menu</p>
+            <p class="uppercase">Menu</p>
         </div>
-        <div> 
-            <div></div>
-            <div>
 
+        <div> 
+            <div>
+                <img src="" alt="">
             </div>
             <div>
-                <p>Registrar/Entrar</p>
+                <h2 class="uppercase">MasterCarros</h2>
+            </div>
+            <div>
+                <p class="uppercase">Registrar/Entrar</p>
             </div>
         </div>
+        
         <div class="join-us">
-            <p></p>
+            <p class="uppercase">Venda seu carro</p>
         </div>
     </header>
-
-    <div class="teste">
-        <p>Esse é meu primeiro texto em SCSS!</p>
-        <p>Esse é meu primeiro texto em SCSS!</p>
-        <p>Esse é meu primeiro texto em SCSS!</p>
-        <p>Esse é meu primeiro texto em SCSS!</p>
-
-        <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-        </ul>
-
-        <div>
-            <p>Esse é outro P.</p>
-        </div>
-    </div>
 </body>
 </html>
